# NeonMacro

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: project-map.mdc  python-poetry-execution.mdc
.github/workflows/: build-exe.yml
assets/icons/: README.md
src/neonftool/: __init__.py  app.py  config.py  hotkeys.py  keymaps.py  logging_setup.py  models.py  overlay.py  postmessage.py  spam_engine.py
src/neonftool/core/: config.py  hotkeys.py  keycodes.py  keymaps.py  overlay.py  postmessage.py  spam_engine.py
src/neonftool/models/: __init__.py  app_config.py  app_options.py  defaults.py  overlay_config.py  spam_profile.py
src/neonftool/platform/windows/: overlay_native.py
src/neonftool/services/: __init__.py  profile_service.py
src/neonftool/targeting/: __init__.py
src/neonftool/ui/: dialogs.py  main_window.py  main_window_components.py
src/neonmacro/: __init__.py  app.py  build_exe.py
src/neonmacro/core/: hotkeys.py  keycodes.py  keymaps.py  logging_setup.py  overlay.py  postmessage.py  runtime.py  spam_engine.py  startup.py
src/neonmacro/models/: __init__.py  app_config.py  app_options.py  defaults.py  spam_profile.py
src/neonmacro/platform/windows/: __init__.py
src/neonmacro/services/: profile_service.py
src/neonmacro/targeting/: title_matching.py  window_targeting.py
src/neonmacro/ui/: dialogs.py  help_content.py  key_capture.py  main_window.py  main_window_components.py  overlay_controller.py  system_tray.py  table_ui_manager.py  widget_state.py  window_icon.py
